--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,10 @@
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 			<version>4.1.3</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 
 		<!-- Oauth2 -->
 		<dependency>
@@ -67,6 +70,11 @@
 			<groupId>com.auth0</groupId>
 			<artifactId>java-jwt</artifactId>
 			<version>4.4.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.webjars.npm</groupId>
+			<artifactId>jwt-decode</artifactId>
+			<version>4.0.0</version>
 		</dependency>
 
 
@@ -109,15 +117,13 @@
 			<scope>compile</scope>
 		</dependency>
 
+		<!-- Faker -->
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<groupId>com.github.javafaker</groupId>
+			<artifactId>javafaker</artifactId>
+			<version>1.0.2</version>
 		</dependency>
-		<dependency>
-			<groupId>org.webjars.npm</groupId>
-			<artifactId>jwt-decode</artifactId>
-			<version>4.0.0</version>
-		</dependency>
+
 	</dependencies>
 
 	<build>
