--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: '17'
-          distribution: 'openjdk'
+          distribution: 'temurin'
 
       - name: Prepare application.yml with secrets
         run: |
