--- a/src/main/deploy-resources/application-template.yml
+++ b/src/main/deploy-resources/application-template.yml
@@ -66,6 +66,9 @@ securityTrail:
 thisPersonDoesNotExist:
   url: https://thispersondoesnotexist.com/
 
+serpApi:
+  apiKey: ${SERPAPI_API_KEY}
+
 logging:
   level:
     org.springframework.security: DEBUG
