--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,17 @@
 		<version>3.3.4</version>
 	</parent>
 
+	<repositories>
+		<repository>
+			<id>central</id>
+			<url>https://repo.maven.apache.org/maven2</url>
+		</repository>
+		<repository>
+			<id>vital-ai</id>
+			<url>https://raw.githubusercontent.com/vital-ai/vital-public-mvn-repo/releases/</url>
+		</repository>
+	</repositories>
+
 	<groupId>mds.tp.api.hackr</groupId>
 	<artifactId>tpApi</artifactId>
 	<version>0.0.1</version>
@@ -102,6 +113,19 @@
 			<artifactId>feign-okhttp</artifactId>
 			<version>13.5</version>
 		</dependency>
+
+		<!-- Google Search Results -->
+		<dependency>
+			<groupId>com.github.serpapi</groupId>
+			<artifactId>google-search-results-java</artifactId>
+			<version>2.0.3</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.11.0</version>
+		</dependency>
+
 
 		<!-- Logs -->
 		<dependency>
